--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "craftcms/cms": "^5.0.0",
     "doublesecretagency/craft-googlemaps": "^5.1.6",
     "ether/simplemap": "^5.0.4",
+    "mmikkel/cp-clearcache": "^2.0.1",
     "vlucas/phpdotenv": "^5.4.0"
   },
   "require-dev": {
