--- a/config/project/project.yaml
+++ b/config/project/project.yaml
@@ -1,4 +1,4 @@
-dateModified: 1756939963
+dateModified: 1758297410
 email:
   fromEmail: info@giftsaround.com
   fromName: 'Gifts Around'
@@ -21,25 +21,28 @@ fs:
     url: '@web/uploads'
 meta:
   __names__:
-    1bbcf789-77a3-45b6-b5c3-3e7b2f518bcb: 'Business Specials' # Business Specials
     9d21a74f-c6b5-434c-8ed2-c75251a61c26: Business # Business
     21d5b2e7-055d-41a3-8842-86406bf86748: 'One Special (same each month)' # One Special (same each month)
     90c4ffa5-83bb-4af6-8837-6ad5bf1c323c: 'Business Phone' # Business Phone
     366a00bd-3f69-477a-8c1d-d922ec7aed18: 'Business Listing' # Business Listing
     0496e6ab-3bd6-4845-8754-3abae7832574: Business # Business
     937faf23-8b1b-469b-9235-401505a750f2: 'Business Address' # Business Address
-    998d77d7-e6eb-4b75-842f-ae8280fba567: 'Monthly Special' # Monthly Special
     1681a684-620d-404c-a918-6af20caa8b8b: 'Business Email' # Business Email
     56699230-c9fb-4962-9d9b-36f4224b5a07: Business # Business
-    a955ad2a-a4f5-4a2d-ad4a-d844e4d15140: 'Multiple Specials' # Multiple Specials
     abca8568-b497-484e-b4d3-5fe77d0d18dd: Category # Category
     b441d323-0b33-4f14-95c6-153d91a1674d: 'Business Website' # Business Website
     bb7cd503-f6ff-480a-b797-4ddb4f3ac9a3: 'Business Images' # Business Images
     c06bf154-ba2d-40f9-9acc-9b0eb650ed25: 'Gifts Around' # Gifts Around
     c7d677fc-5281-4cac-9550-ba58ae4ed0c7: Business # Business
+    d4bb8a19-094e-48c4-b6ca-37154e3fc329: 'Monthly Specials' # Monthly Specials
+    f9b21139-b37c-4768-95ce-6a52e55e6352: Users # Users
     fc73028f-e956-417d-a9cb-27cf6b5d2777: Category # Category
     fce21e2d-42e7-4672-8d05-682879197a37: 'Nick Test' # Nick Test
 plugins:
+  cp-clearcache:
+    edition: standard
+    enabled: true
+    schemaVersion: 1.0.0
   google-maps:
     edition: standard
     enabled: true
