--- a/config/project/project.yaml
+++ b/config/project/project.yaml
@@ -1,4 +1,4 @@
-dateModified: 1767131935
+dateModified: 1769631489
 email:
   fromEmail: info@giftsaround.com
   fromName: 'Gifts Around'
@@ -6,7 +6,7 @@ email:
   template: ''
   transportSettings:
     host: smtp.zoho.com
-    password: OwlLawn0407!
+    password: OwlLawn4200!
     port: '465'
     useAuthentication: '1'
     username: info@giftsaround.com
@@ -56,8 +56,9 @@ plugins:
     enabled: true
     schemaVersion: 1.0.0
   freeform:
-    edition: express
+    edition: pro
     enabled: true
+    licenseKey: HL9340USSEDAJJUL2UUQS78V
     schemaVersion: 5.14.1
   google-maps:
     edition: standard
@@ -80,5 +81,5 @@ system:
   live: true
   name: 'Gifts Around'
   retryDuration: null
-  schemaVersion: 5.8.0.3
+  schemaVersion: 5.9.0.8
   timeZone: America/New_York
