--- a/config/project/project.yaml
+++ b/config/project/project.yaml
@@ -1,4 +1,4 @@
-dateModified: 1772047067
+dateModified: 1772063227
 email:
   fromEmail: info@giftsaround.com
   fromName: 'Gifts Around'
@@ -22,11 +22,13 @@ fs:
 meta:
   __names__:
     2e7eeff7-13b1-4896-881c-eb60635f0b8a: Body # Body
+    4fc6fb10-ae7e-4ef2-a469-3b18ab7d1f8e: 'Privacy Policy' # Privacy Policy
     5d23cabc-5a26-4e37-bca5-7f04116b4e8b: Simple # Simple
     6d3e1917-0432-4bae-96fe-6e467b048fb3: 'Contact ' # Contact 
     9d21a74f-c6b5-434c-8ed2-c75251a61c26: Business # Business
     19b7dc0c-1f0e-4d68-928d-0866f3bf5c99: 'Business Description' # Business Description
     21d5b2e7-055d-41a3-8842-86406bf86748: 'One Special (same each month)' # One Special (same each month)
+    26d33ed5-cdbb-4972-b480-64c1f13b45ff: Privacy # Privacy
     056d3ae0-c36e-4de8-b868-c920778e8b63: 'Business Name' # Business Name
     057bffe8-145d-4cf8-a820-52b631b73266: 'Optimized Image' # Optimized Image
     90c4ffa5-83bb-4af6-8837-6ad5bf1c323c: 'Business Phone' # Business Phone
